# tinygp-jax-benchmarks

./: .gitignore  README.md  log-probability-call-graph.md  pyproject.toml
.github/workflows/: benchmark.yml  breakdown-benchmark.yml  pr-smoke.yml  repro-regression.yml
benchmarks/: __init__.py  breakdown.py  breakdown_compare.py  compare.py  config.py  data.py  dtype_check.py  dump_hlo.py  env.py  repro.py  run.py  scenarios.py
notebooks/: 00 - exploration.ipynb  01 - hlo.ipynb  02 - dtype_bisect.ipynb  03 - thunk flag.ipynb
tests/: test_breakdown.py  test_data.py  test_output.py  test_scenarios.py
